# libmrl

./: .gitignore  CMakeLists.txt  buildlib  config.scm  newplan  notes
apps/: CMakeLists.txt
apps/cutter/: CMakeLists.txt  cutter.c
apps/eup/: CMakeLists.txt  eup.c  spec.html
apps/neural/: CMakeLists.txt  neural.c
apps/simple_gl1/: CMakeLists.txt  CMakeLists.txt~  simple_gl1.c  simple_gl1.c~
mrl/: CMakeLists.txt
mrl/3d/: CMakeLists.txt  mesh.c  mesh.h  vec3.c  vec3.h
mrl/ai/: CMakeLists.txt
mrl/exec/: CMakeLists.txt  crdl.c  crdl.h
mrl/exec/emu/: .gitignore  CMakeLists.txt  README  board.c  board.h  boardtest.c  ex_tp_test.c  processor.c  processor.h  proctest.c
mrl/exec/emu/dev/: CMakeLists.txt
mrl/exec/emu/dev/debug/: CMakeLists.txt
mrl/exec/emu/dev/mem/: CMakeLists.txt
mrl/exec/emu/dev/proc/: CMakeLists.txt
mrl/exec/emu/example/: CMakeLists.txt  termproc.c  termproc.h
mrl/net/: CMakeLists.txt  tcp.c  tcp.h
mrl/str/: CMakeLists.txt  strsplit.c  strsplit.h  strtrim.c  strtrim.h
mrl/test/: CMakeLists.txt  alist_get_set.c  byteblob_big.c  emu_boardtest.c  emu_ex_tp_test.c  emu_proctest.c  list_append.c  list_cons.c  list_iter.c  list_last.c  list_reverse.c  pool_advanced.c  pool_basic.c  pool_full.c  pool_refill.c
mrl/ui/: CMakeLists.txt
