
set(here ${CMAKE_CURRENT_LIST_DIR})

add_subdirectory(debug)
add_subdirectory(mem)
add_subdirectory(proc)

set(MRL_EXEC_EMU_DEV_SOURCES ${MRL_EXEC_EMU_DEV_SOURCES}
)

set(MRL_EXEC_EMU_DEV_LINK_LIBRARIES ${MRL_EXEC_EMU_DEV_LINK_LIBRARIES}
)

set(MRL_EXEC_EMU_SOURCES
  ${MRL_EXEC_EMU_SOURCES}
  ${MRL_EXEC_EMU_DEV_SOURCES}
  PARENT_SCOPE)

set(MRL_EXEC_EMU_LINK_LIBRARIES
  ${MRL_EXEC_EMU_LINK_LIBRARIES}
  ${MRL_EXEC_EMU_DEV_LINK_LIBRARIES}
  PARENT_SCOPE)

